ffmpeg: Use actual frame dimensions in checks in sub2video_update()

Fixes Ticket4744 part2

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>